--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,6 @@
-name: 'publish'
-on:
   push:
     branches:
       - main
-
 jobs:
   publish-tauri:
     permissions:
@@ -12,7 +9,6 @@ jobs:
       fail-fast: false
       matrix:
         platform: [windows-latest]
-
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v3
@@ -22,10 +18,11 @@ jobs:
           node-version: 16
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
-      - name: install frontend dependencies
-      - uses: pnpm/action-setup@v2
+      - name: install pnpm
+        uses: pnpm/action-setup@v2
         with:
           version: 8
+      - name: install frontend dependencies
         run: pnpm install
       - uses: tauri-apps/tauri-action@v0
         env:
