--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,9 @@
+name: 'publish'
+on:
   push:
     branches:
       - main
+
 jobs:
   publish-tauri:
     permissions:
@@ -9,6 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         platform: [windows-latest]
+
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v3
@@ -16,12 +20,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
-      - name: install Rust stable
-        uses: dtolnay/rust-toolchain@stable
-      - name: install pnpm
-        uses: pnpm/action-setup@v2
+      - uses: pnpm/action-setup@v2
         with:
           version: 8
+      - name: install Rust stable
+        uses: dtolnay/rust-toolchain@stable
       - name: install frontend dependencies
         run: pnpm install
       - uses: tauri-apps/tauri-action@v0
