actions updater debug

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,6 +6,8 @@ on:
 
 jobs:
   publish-tauri:
+    outputs:
+      release_id: ${{ steps.tauri-action.outputs.releaseId }}
     permissions:
       contents: write
     strategy:
@@ -28,11 +30,12 @@ jobs:
       - name: install frontend dependencies
         run: pnpm install
       - uses: tauri-apps/tauri-action@v0
+        id: tauri-action
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tagName: app-v__VERSION__
+          tagName: v__VERSION__
           releaseName: 'bundol v__VERSION__'
-          releaseBody: 'See the assets to download this version and install.'
-          releaseDraft: true
           prerelease: false
+          includeUpdaterJson: true
+          updaterJsonPreferNsis: true
