--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 tauri-build = { version = "1.4", features = [] }
 
 [dependencies]
-tauri = { version = "1.4", features = [ "window-request-user-attention", "system-tray", "window-show", "window-start-dragging", "window-hide", "window-maximize", "window-close", "window-minimize", "window-unmaximize", "window-unminimize", "shell-open"] }
+tauri = { version = "1.4", features = [ "updater", "window-request-user-attention", "system-tray", "window-show", "window-start-dragging", "window-hide", "window-maximize", "window-close", "window-minimize", "window-unmaximize", "window-unminimize", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 reqwest = { version = "0.10.10", features = ["blocking", "json"] }
