--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -25,10 +25,11 @@ jobs:
           pwd
           ls -la
           echo "test" > test.txt
+          echo $TAURI_PRIVATE_KEY
       - name: GIST Updater
         uses: exuanbo/actions-deploy-gist@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GIST_TOKEN }}
           gist_id: 0fa827e6892a79ae305921ae947f8764
           file_path: test.txt
           file_type: txt
