--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bundol",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "description": "",
   "scripts": {
     "start": "vite",
@@ -18,6 +18,7 @@
     "@fontsource-variable/rubik": "^5.0.10",
     "@fontsource/inter": "^5.0.8",
     "@iconify-json/mdi": "^1.1.54",
+    "@solidjs/router": "^0.8.3",
     "@tauri-apps/cli": "^1.4.0",
     "@types/ws": "^8.5.5",
     "highlight.js": "^11.8.0",
