--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,7 +13,24 @@ edition = "2021"
 tauri-build = { version = "1.4", features = [] }
 
 [dependencies]
-tauri = { version = "1.4", features = [ "window-set-closable", "window-set-always-on-top", "window-center", "window-create", "updater", "window-request-user-attention", "system-tray", "window-show", "window-start-dragging", "window-hide", "window-maximize", "window-close", "window-minimize", "window-unmaximize", "window-unminimize", "shell-open"] }
+tauri = { version = "1.4", features = [
+    "window-set-closable",
+    "window-set-always-on-top",
+    "window-center",
+    "window-create",
+    "updater",
+    "window-request-user-attention",
+    "system-tray",
+    "window-show",
+    "window-start-dragging",
+    "window-hide",
+    "window-maximize",
+    "window-close",
+    "window-minimize",
+    "window-unmaximize",
+    "window-unminimize",
+    "shell-open",
+] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 reqwest = { version = "0.10.10", features = ["blocking", "json"] }
@@ -24,6 +41,7 @@ native-tls = "0.2.11"
 tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
 futures-util = "0.3.28"
 log = "0.4.20"
+tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
 lazy_static = "1.4.0"
 
 [features]
