--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bundol",
-  "version": "0.0.7",
+  "version": "0.0.8-beta",
   "description": "",
   "scripts": {
     "start": "vite",
